--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "framer-motion": "^11.11.8",
     "fs": "^0.0.1-security",
+    "html2pdf.js": "^0.10.2",
     "lucide-react": "^0.446.0",
     "mongodb": "^6.9.0",
     "multer": "^1.4.5-lts.1",
@@ -39,7 +41,7 @@
     "eslint-config-next": "14.2.12",
     "nodemon": "^3.1.7",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.13",
     "typescript": "^5"
   }
 }
