--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.0",
     "framer-motion": "^11.11.8",
     "fs": "^0.0.1-security",
+    "gsap": "^3.12.5",
     "html2pdf.js": "^0.10.2",
     "lucide-react": "^0.446.0",
     "mongodb": "^6.9.0",
